Validações de numeros repetidos adicionada, validação por ID dos tipos adicionada, validação de duplicidade de alugueis e contrato adicionada, pagina inicial incrementada com todas as parcelas atrasadas, possibilidade de exclusão de alugueis inserida
