# backend/controller/contratoController.js
@@ -1,33 +1,33 @@
 const ContratoModel = require('../model/contratoModel');
 
-class ContratoController{
+class ContratoController {
 
-    async listar(req,res){
+    async listar(req, res) {
         let contrato = new ContratoModel();
         let lista = await contrato.listar();
         let listaRetorno = [];
-        for(let i=0; i<lista.length; i++){
+        for (let i = 0; i < lista.length; i++) {
             listaRetorno.push(lista[i].toJSON());
         }
         res.status(200).json(listaRetorno);
     }
 
-    async obter(req,res){
-        if(req.params.idContrato > 0){
+    async obter(req, res) {
+        if (req.params.idContrato > 0) {
             let contrato = new ContratoModel();
             contrato = await contrato.obter(req.params.idContrato);
-            if(contrato != null){
+            if (contrato != null) {
                 res.status(200).json(contrato.toJSON());
-            }else{
-                res.status(500).json({message:"Erro ao obter contrato."});
+            } else {
+                res.status(500).json({ message: "Erro ao obter contrato." });
             }
-        }else{
-            res.status(400).json({message:"Parâmetros inválidos."});
+        } else {
+            res.status(400).json({ message: "Parâmetros inválidos." });
         }
     }
 
-    async gravar(req,res){
-        if(Object.keys(req.body).length > 0){
+    async gravar(req, res) {
+        if (Object.keys(req.body).length > 0) {
             let contrato = new ContratoModel();
 
             contrato.idContrato = 0;
@@ -38,18 +38,20 @@ class ContratoController{
             contrato.valorParcela = req.body.valorParcela;
             contrato.dataVencimento = req.body.dataVencimento;
             let ok = await contrato.gravar();
-            if(ok){
-                res.status(200).json({msg:"Contrato gravado com sucesso."});
-            }else{
-                res.status(500).json({msg:"Erro ao gravar contrato."});
+            if (ok === true) {
+                res.status(200).json({ msg: "Contrato gravado com sucesso." });
+            } else if (ok === false) {
+                res.status(400).json({ msg: "Contrato já existente." });
+            } else {
+                res.status(500).json({ msg: "Erro ao gravar contrato." });
             }
-        }else{
-            res.status(400).json({msg:"Parâmetros inválidos."});
+        } else {
+            res.status(400).json({ msg: "Parâmetros inválidos." });
         }
     }
 
-    async alterar(req,res){
-        if(Object.keys(req.body).length > 0){
+    async alterar(req, res) {
+        if (Object.keys(req.body).length > 0) {
             let contrato = new ContratoModel();
             contrato.idContrato = req.body.idContrato;
             contrato.idImovel = req.body.idImovel;
@@ -59,26 +61,26 @@ class ContratoController{
             contrato.valorParcela = req.body.valorParcela;
             contrato.dataVencimento = req.body.dataVencimento;
             let ok = await contrato.gravar();
-            if(ok){
-                res.status(200).json({msg:"Contrato alterado com sucesso."});
-            }else{
-                res.status(500).json({msg:"Erro ao alterar contrato."});
+            if (ok) {
+                res.status(200).json({ msg: "Contrato alterado com sucesso." });
+            } else {
+                res.status(500).json({ msg: "Erro ao alterar contrato." });
             }
-        }else{
-            res.status(400).json({msg:"Parâmetros inválidos."});
+        } else {
+            res.status(400).json({ msg: "Parâmetros inválidos." });
         }
     }
-    async excluir(req,res){
-        if(req.params.idContrato != null){
+    async excluir(req, res) {
+        if (req.params.idContrato != null) {
             let contrato = new ContratoModel();
             let ok = await contrato.excluir(req.params.idContrato);
-            if(ok){
-                res.status(200).json({msg:"Contrato excluido com sucesso."});
-            }else{
-                res.status(500).json({msg:"Erro ao excluir contrato."});
+            if (ok) {
+                res.status(200).json({ msg: "Contrato excluido com sucesso." });
+            } else {
+                res.status(500).json({ msg: "Erro ao excluir contrato." });
             }
-        }else{
-            res.status(400).json({msg:"Parâmetros inválidos."});
+        } else {
+            res.status(400).json({ msg: "Parâmetros inválidos." });
         }
     }
 
